add comment to fpm-config for env-vars

--- a/docker/dev/php/fpm-www.conf
+++ b/docker/dev/php/fpm-www.conf
@@ -12,7 +12,7 @@ pm.max_children = 50
 pm.start_servers = 5
 pm.min_spare_servers = 5
 pm.max_spare_servers = 35
-clear_env = off
+clear_env = off             ; dont clear env vars such as XDEBUG_CONFIG
 slowlog = /var/log/php-fpm-www-slow.log
 php_admin_value[error_log] = /proc/self/fd/2
 php_admin_flag[log_errors] = on
