add fpm/cli specific configuration as comment for better understanding

--- a/docker/dev/php/php-fpm.ini
+++ b/docker/dev/php/php-fpm.ini
@@ -7,3 +7,4 @@ xdebug.show_local_vars = 1
 xdebug.max_nesting_level = 1024
 
 xdebug.start_with_request = yes
+;xdebug.client_host = host.docker.internal
