--- a/docker/dev/php/php-cli.ini
+++ b/docker/dev/php/php-cli.ini
@@ -7,3 +7,4 @@ xdebug.show_local_vars = 1
 xdebug.max_nesting_level = 1024
 
 xdebug.start_with_request = trigger
+;xdebug.discover_client_host = true
